--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
       --veil:rgba(255,255,255,.06);
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:linear-gradient(180deg,var(--royal-purple),#101224 60%, #0b0f1a); color:#e9ecf3; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    html,body{
+      margin:0;
+      padding:0;
+      background:linear-gradient(180deg,var(--royal-purple),#101224 60%, #0b0f1a);
+      color:#e9ecf3;
+      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial
+    }
+    /* NEW: breathing room under sticky header (48–72px responsive) */
+    body{ padding-top:clamp(48px, 6vw, 72px); }
+
     a{color:inherit;text-decoration:none}
     .container{max-width:1120px;margin:0 auto;padding:0 16px}
 
@@ -66,6 +75,7 @@
 
     /* Footer */
     footer{border-top:1px solid rgba(255,255,255,.12);padding:18px 0 40px;color:#aab3c6;font-size:12px}
+    .ver{opacity:.65}
   </style>
 </head>
 <body>
@@ -140,7 +150,7 @@
       <div style="display:flex;align-items:flex-end;justify-content:space-between;gap:12px">
         <div>
           <h2 style="margin:0 0 6px 0;font-size:22px;color:#fff">Courses & Downloads</h2>
-          <p style="margin:0;color:#cfd6ea">Self‑paced learning with living diagrams, templates, and guided practice.</p>
+          <p style="margin:0;color:#cfd6ea">Self-paced learning with living diagrams, templates, and guided practice.</p>
         </div>
         <a class="btn ghost" href="#" target="_top">View All</a>
       </div>
@@ -188,7 +198,7 @@
       <div class="card" style="padding:20px 16px">
         <h2 style="margin:0 0 6px 0;font-size:22px;color:#fff">The Halo Story</h2>
         <p style="margin:0;color:#cfd6ea">
-          Halo Portal is a sacred, question‑driven space for learning and remembrance—a bridge between
+          Halo Portal is a sacred, question-driven space for learning and remembrance—a bridge between
           ancient wisdom and modern embodiment. We weave Anthroposophy, alchemy, and Jungian imaginal work
           into a clear path for transformation, guided by beauty, rigor, and love.
         </p>
@@ -213,7 +223,13 @@
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap">
       <span>© <span id="yr"></span> Rackmob LLC · Halo Portal · All rights reserved.</span>
-      <span style="display:flex;gap:16px"><a href="https://www.youtube.com/@halointelligence" target="_blank" rel="noreferrer">YouTube</a><a href="https://www.instagram.com/halointelligence" target="_blank" rel="noreferrer">Instagram</a><a href="mailto:hello@halostargate.com">Email</a></span>
+      <span style="display:flex;gap:16px;align-items:center">
+        <a href="https://www.youtube.com/@halointelligence" target="_blank" rel="noreferrer">YouTube</a>
+        <a href="https://www.instagram.com/halointelligence" target="_blank" rel="noreferrer">Instagram</a>
+        <a href="mailto:hello@halostargate.com">Email</a>
+        <!-- NEW: version tag -->
+        <span class="ver">· v6 — Sep 24, 2025</span>
+      </span>
     </div>
   </footer>
 
@@ -222,7 +238,7 @@
     document.getElementById('yr').textContent = new Date().getFullYear();
 
     // Build the YouTube Uploads playlist ID from your Channel ID.
-    // From your screenshot: Channel ID = UCQyXtBtBXzdzjnCImOgBMSg
+    // Channel ID = UCQyXtBtBXzdzjnCImOgBMSg
     const channelId = "UCQyXtBtBXzdzjnCImOgBMSg";
     const uploadsId = "UU" + channelId.substring(2); // replace 'UC' -> 'UU'
     const src = "https://www.youtube.com/embed/videoseries?rel=0&list=" + uploadsId;
